2010-04-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Avoid re-enabling a minor mode after the user turned the minor mode
	off if MODE-enable-in-buffers is run twice (typically once from
	fundamental-mode's after-change-major-mode-hook and a second time from
	run-mode-hook's own after-change-major-mode-hook).

	* emacs-lisp/lisp.el (lisp-complete-symbol): Fail gracefully.

2010-04-27  Sam Steingold  <sds@gnu.org>

	* progmodes/bug-reference.el (bug-reference-url-format): Mark as
	`safe-local-variable' if the value is a string or a function, as
	documented and implemented on 2010-04-02.

2010-04-27  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-buffer-internal): Bind `ido-use-virtual-buffers' to nil
	when method is 'kill.

2010-04-27  Agustín Martín  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-init-process): Fix personal dictionary condition
	in default directory check.
	(ispell-init-process,ispell-kill-ispell,kill-buffer-hook):
	Kill ispell process when killing its associated buffer.

2010-04-27  Jan Djärv  <jan.h.d@swipnet.se>

	* desktop.el (desktop-kill): ask-if-new: Ask if desktop file exists,
	but we aren't using it.

2010-04-25  Jan Djärv  <jan.h.d@swipnet.se>

	* tool-bar.el (tool-bar-local-item-from-menu): Revert unintended
	checkin in rev 100010.

2010-04-24  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-obsolete-files-regexps):
	Ignore VCS-ignore files, and deleted nextstep preferences files.
	(authors-ignored-files): Ignore deleted cedet test files, and "*.el".
	(authors-ambiguous-files): New list.
	(authors-valid-file-names): Add some deleted files.
	(authors-renamed-files-alist): Add font-setting.el, edt-user.doc.
	(authors-disambiguate-file-name): New function.  (Bug#5501)
	(authors-canonical-file-name): Doc fix.
	Don't warn about obsolete files.
	(authors-canonical-file-name, authors-scan-el):
	Use authors-disambiguate-file-name.
